feat: Separate configDb from org-specific data db and make sync work
